# TSUBAME-Distributed-Training-Template

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
configs/: config.yaml
configs/experiment/: example.yaml
configs/scheduler/: tsubame.yaml
tsubame/: __init__.py
tsubame/engines/: trainer.py
tsubame/scripts/: launch.py  train.py
tsubame/utils/: __init__.py  config.py  console.py  distributed.py  git.py
